tests/error/type_match/typename_array1.bz
// error: couldn't match the function call to the function
// note: function argument types are 'typename'
// note: candidate: 'function test1(T: [4: typename]) -> void'
function test1(T: [4: typename]);

function test()
{
	test1([3: i32]);
}
